Fix some large photosets from overflowing over caption

--- a/serious-stuff/styles.css
+++ b/serious-stuff/styles.css
@@ -156,6 +156,7 @@ Explanation: http://zurb.com/word/mobile-first
 	}
 	.photo figcaption.caption{
 		margin-top:0.4rem;
+		display:inline-block;
 	}
 
 	.photoset-photos{
